tests2/tests/snapshots/test__typescript__type_collection.snap
---
source: tests2/tests/typescript.rs
expression: "Typescript::default().export(&types).unwrap()"
---
// This file has been generated by Specta. Do not edit this file manually.



export type A = never;
